absolute path to relative path

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="/main.css" />
+  <link rel="stylesheet" type="text/css" href="../main.css" />
   <title>真摇中心</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
 </body>
 </html>
 
-<script src="/vender/underscore-min.js"></script>
-<script src="/vender/vue.min.js"></script>
-<script src="/lib/util.js"></script>
+<script src="../vender/underscore-min.js"></script>
+<script src="../vender/vue.min.js"></script>
+<script src="../lib/util.js"></script>
 <script src="app.js"></script>
