absolute path to relative path

--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -1,5 +1,5 @@
 <div class="logo hpot-sec1-logo">
-  <img src="/img/hpot1.jpg" />
+  <img src="../img/hpot1.jpg" />
 </div>
 
 　窓から差し込んだ朝日が散らかり放題の部屋を照らす。
