--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -34,7 +34,7 @@
 </body>
 </html>
 
-<script src="../vender/underscore-min.js"></script>
-<script src="../vender/vue.min.js"></script>
+<script src="../vendor/underscore-min.js"></script>
+<script src="../vendor/vue.min.js"></script>
 <script src="../lib/util.js"></script>
 <script src="app.js"></script>
