--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -28,7 +28,7 @@
           </li>
         </ol>
 
-        <div v-html="mainpage.logo" v-if="mainpage.logo"></div>
+        <div v-component="hpot_logo"></div>
       </div>
     </div>
   </div>
