--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -4,7 +4,7 @@
 
 　窓から差し込んだ朝日が散らかり放題の部屋を照らす。
 「ん……」
-　ベッドの上で惰眠を貪っていた<ruby>希海<rp>(</rp><rt>のぞみ</rt><rp></rp></ruby>は、太陽の光を正面から受け顔を歪めた。今何時だろう。枕元の時計を手探りで探し当て、目を細めながらデジタル表示の文字盤に目をやる。弱々しい光を放つ簡素な緑色の液晶。セグメントは6時32分を指していた。
+　ベッドの上で惰眠を貪っていた<ruby>希海<rp>(</rp><rt>のぞみ</rt><rp>)</rp></ruby>は、太陽の光を正面から受け顔を歪めた。今何時だろう。枕元の時計を手探りで探し当て、目を細めながらデジタル表示の文字盤に目をやる。弱々しい光を放つ簡素な緑色の液晶。セグメントは6時32分を指していた。
 　まだ6時か。半分寝ぼけた頭で希海は思う。最近はすっかり日の出が早くなった。アパートの一番東にあるこの部屋では、否が応でも、陽の光に季節の移ろいを思い知らされる。それでも今の季節はまだいい方で、夏などは眩しさと暑さで寝られたのもではない。早起きが必要な者ならまだしも、今の希海にとってこの朝日は完全にありがた迷惑な存在でしかなかった。
 　あぁー。
 　布団をかぶったまま、知性の欠片もない間延びした声を上げる。そういえば昨日は夜の8時に寝た。いつもの様にネットサーフィンをしていたら面白いサイトを見つけてしまって、隅から隅まで読んでいるうちに昼夜が再逆転してしまったのだ。せっかくだからこのまま起きてしまおうか。たまには健康的な生活も、
