--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="../main.css" />
+  <link rel="stylesheet" type="text/css" href="../css/desktop.css" />
+  <link rel="stylesheet" type="text/css" href="../css/mobile.css" />
   <title>真摇中心</title>
 </head>
 <body>
@@ -37,5 +38,6 @@
 
 <script src="../vendor/underscore-min.js"></script>
 <script src="../vendor/vue.min.js"></script>
+<script src="../vendor/device.min.js"></script>
 <script src="../lib/util.js"></script>
 <script src="app.js"></script>
