--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="../css/desktop.css" />
   <link rel="stylesheet" type="text/css" href="../css/mobile.css" />
   <title>真摇中心</title>
