--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" type="text/css" href="../css/desktop.css" />
-  <link rel="stylesheet" type="text/css" href="../css/mobile.css" />
+  <link rel="stylesheet" type="text/css" media="screen and (min-width: 24em)" href="../css/desktop.css" />
+  <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="../css/mobile.css" />
   <title>真摇中心</title>
 </head>
 <body>
@@ -51,6 +51,5 @@
 
 <script src="../vendor/underscore-min.js"></script>
 <script src="../vendor/vue.min.js"></script>
-<script src="../vendor/device.min.js"></script>
 <script src="../lib/util.js"></script>
 <script src="app.js"></script>
