--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -21,12 +21,7 @@
 
         <ol class="chapters">
           <li v-repeat="chapter : mainpage.chapters">
-            <a href="#{{chapter.id}}">{{chapter.title}}</a>
-            <ol class="sections">
-              <li v-repeat="section : chapter.sections">
-                <a href="#{{section.id}}">{{section.title}}</a>
-              </li>
-            </ol>
+            <a href="#{{chapter.id}}">{{chapter.sectPrefix}}</a>
           </li>
         </ol>
 
@@ -35,12 +30,7 @@
 
         <ol class="mobile-chapters">
           <li v-repeat="chapter : mainpage.chapters">
-            <a href="#{{chapter.id}}">{{chapter.title}}</a>
-            <ol class="sections">
-              <li v-repeat="section : chapter.sections">
-                <a href="#{{section.id}}">{{section.title}}</a>
-              </li>
-            </ol>
+            <a href="#{{chapter.id}}">{{chapter.sectPrefix}}</a>
           </li>
         </ol>
       </div>
