--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -17,10 +17,9 @@
     </div>
 
     <div class="mainpage">
+      <div v-component="hpot_header_of_main"></div>
+
       <div class="contents">
-
-        <div v-component="hpot_logo"></div>
-
 
         <ol class="chapters">
           <li v-repeat="chapter : mainpage.chapters">
