--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="mobile.css" />
   <title>真摇中心</title>
 </head>
-<body id="mainpage">
-  <div v-component="hpot-mainpage-header"></div>
+<body id="page">
+  <div v-component="hpot-main-header"></div>
 
   <div class="contents">
-    <div v-component="hpot-index"></div>
+    <div id="main-hpot-index" v-component="hpot-index"></div>
   </div>
 </body>
 </html>
@@ -18,4 +18,4 @@
 <script src="config.js"></script>
 <script src="../vendor/vue.min.js"></script>
 <script src="components.js"></script>
-<script src="index.js"></script>
+<script src="page.js"></script>
