--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -10,7 +10,7 @@
   <div v-component="hpot-page-header"></div>
 
   <div class="contents">
-<pre>
+<div class="text">
 <div class="logo hpot-sec1-logo">
   <img src="../img/hpot1.jpg" />
 </div>
@@ -40,7 +40,7 @@
 （もう1年も経つのか……）
 　目を閉じ、ゆっくりと呼吸を整える。
 　希海が大学に行かなくなったのは、ちょうど去年の今頃だった。
-</pre>
+</div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
   </div>
