--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -1,3 +1,16 @@
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" type="text/css" media="screen and (min-width: 24em)" href="desktop.css" />
+  <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="mobile.css" />
+  <title>真摇中心</title>
+</head>
+<body id="page">
+  <div v-component="hpot-page-header"></div>
+
+  <div class="contents">
+<div class="text">
 　青山希海は、生まれも育ちも<ruby>真揺<rp></rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンだ。上新台の市立病院で生を受け、小学校は<ruby>真浜区立第六小学校<rp></rp><rt>ロ　ク　シ　ョ　ウ</rt><rp>)</rp></ruby>、中学校は同じく区立の<ruby>第三中学校<rp></rp><rt>サ　ン　チ　ュ　ウ</rt><rp>)</rp></ruby>。高校だって近所にあって実家から通っていたし、現在希海が籍を置いている真浜大学も高校と同じ敷地にある。
 「遠慮せず上がってよ。狭いところだけど」
 　乱暴に靴を脱ぎ捨て希海は言った。狭いという言葉は謙遜でも何でもなく、実際にこの玄関では二人並んで靴紐が結べそうにない。
@@ -148,3 +161,14 @@
 「じゃあ……」
 　じゃあどうすればいいのか。希海の喉から出かかった言葉を先回りするかのように、男は短く、簡潔にその答えを口にした。
 「下に車を停めてある。この子を運ぶから手伝ってくれ」
+</div>
+
+    <div id="footer" v-component="hpot-page-footer"></div>
+  </div>
+</body>
+</html>
+
+<script src="config.js"></script>
+<script src="../vendor/vue.min.js"></script>
+<script src="components.js"></script>
+<script src="page.js"></script>
