--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -10,11 +10,11 @@
   <div v-component="hpot-page-header"></div>
 
   <div class="contents">
-<div class="text">
-<div class="logo hpot-sec1-logo">
+<div class="logo hpot-sect1-logo">
   <img src="../img/hpot1.jpg" />
 </div>
 
+<div class="text">
 　窓から差し込んだ朝日が散らかり放題の部屋を照らす。
 「ん……」
 　ベッドの上で惰眠を貪っていた<ruby>希海<rp>(</rp><rt>のぞみ</rt><rp>)</rp></ruby>は、太陽の光を正面から受け顔を歪めた。今何時だろう。枕元の時計を手探りで探し当て、目を細めながらデジタル表示の文字盤に目をやる。弱々しい光を放つ簡素な緑色の液晶。セグメントは6時32分を指していた。
