--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -1,1 +1,193 @@
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" type="text/css" media="screen and (min-width: 24em)" href="desktop.css" />
+  <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="mobile.css" />
+  <title>真摇中心</title>
+</head>
+<body id="page">
+  <div v-component="hpot-page-header"></div>
 
+  <div class="contents">
+<div class="text">
+　ベッドタウンとしての色彩が強い<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンにあって、昼間でも人通りが絶えない繁華な場所が存在する。
+　地区センター。
+　いわゆる駅前である。真揺ニュータウンには北・中央・南の3ヶ所に地区センターが存在し、それぞれが各地区の商業・交通の拠点となっている。中でも真揺中心駅の周囲に広がる中央地区センターはとりわけ規模が大きく、駅周辺にはショッピングモールや百貨店・オフィスなどが集積している。
+　そして、その中央地区センターの一角。地下鉄の改札を出て階段を登ったすぐのところにあるガラス張りの小洒落た店舗の前にふたりは立っていた。
+「…………」
+　行き交う人々の往来を背に、リコはガラスの向こう側を物珍しそうに眺めている。
+「うーん」
+　希海が唸った。
+　ウィンドウ越しに見える内装は白を基調とした清潔感あふれる広々としたレイアウト。暖色系の間接照明がいくつもの調理台を照らしており、その周りではエプロン姿の女性たちが料理を作りながら楽しそうに談笑をしていた。
+（これはちょっと敷居が高いかなあ）
+　料理教室、と思い立ってここまで来てみたはいいものの、現場を目の前にするとつい二の足を踏んでしまう。
+「…………」
+　よだれを落とさん勢いで口を半開きにしたリコの視線の先には、エプロンを身に纏った女性たち。年齢は様々だが、皆いかにも『いいところの奥さん・お嬢さん』と言わんばかりの上品ないでたちである。よくよく見ると作っている料理もスイーツだのイタリアンだの、おハイソなものばかりだ。
+（こんなとこに行ったら絶対浮く……間違いなく浮く……）
+　希海の得意料理は『もやし炒め』である（得意というか一番よく作るというだけの話だが）。塩コショウと化学調味料を振りかけてもやしを炒めるだけの簡素すぎる料理。その他のレパートリーとしてはカレー、チャーハン、パスタなどがあるが、どれも一人暮らしの学生が手軽に腹を膨らませるためのものだ。おしゃれで気の利いた料理など希海にはまったくと言っていいほど無縁である。
+（やっぱ地道にレシピ本でも買ってコツコツやるしかないか）
+　すっかり気圧された希海は頭をかきむしりながらその場を後にする。小洒落た料理が作れないからこそ通うのが筋というものだが、あのきらびやかな空間を見ていると今の希海にはそれ以前の問題であるような気がした。自分があんな場所に行ってあの人たちと楽しく談笑している姿が想像できない。趣味はゲームとネット、たまにジョギング。まともな恋愛は大学に入ってからというもの、すっかりご無沙汰である。そんな希海が、彼女たちと共通の話題など持ち合わせているはずがない。勇気を振り絞って参加してみたところで、一人死にそうな顔をして黙々と包丁を振るうか、さもなくば無理に会話を弾ませようとして空転してしまうのがオチだろう。人間には向き不向きというものがあるのだ。柄にもないことはするものではないと希海は思う。
+　ふと気付くとリコが居なかった。振り返ってみると、ウィンドウの前に突っ立って離れようとしない後ろ姿。
+「何やってんの？　ほら、行くよ」
+「あ……。は、はい」
+　希海が呼びかけるとリコは小走りにこちらへやってきた。目指すは本屋である。当初の目的が果たされなかった以上、もはやこの場所に用などないのだが、せっかくバスに乗ってここまで出てきたのだ。買い物の一つや二つこなしてからでなければ帰るに帰れない。
+「行かないんですか？　料理教室」
+　隣を歩くリコが口を開いた。
+「ん、ああ。別にちょっと覗いてみただけよ」
+「でも希海さん、あそこに通うつもりで、ここまで来たんじゃないんですか？」
+　料理教室を見に着たなんて言っただろうか。世間一般の常識には疎いくせして、リコはこういう勘だけやたらと鋭い。
+「違うって。ほら、ああいうところって結構お金かかるしね。安かったら行ってもいいかなって思うけど、あの様子じゃ結構いい値段するわよ」
+　リコの追求を適当にかわしながら階段を登る。踊り場を折り返して最後の一段を乗り越えると視界が開けた。ショッピングセンターの2階部分に設けられた屋外広場である。駆けっこはおろか、ところどころに置かれたベンチやオブジェを取り除けばフットサルすら余裕でできそうなくらいのスペース。開放前に作られた築数十年の施設とはいえ、このような贅沢な空間のとり方はそれ以降の建築に通じるものがあった。
+「今日もいい天気ですね」
+　空を見上げて嬉しそうにリコが言った。
+　その言葉につられて希海も上空に視線を移してみる。どこまでも続いているかのような真っ青な空に、真新しい飛行機雲が帯を引いていた。6月も末となれば空の表情はすっかり夏のそれだ。最近できた家電量販店の向こうでは、山のような大きさにまで成長した積乱雲がこちらをのぞき込んでいる。
+「ああー嫌だなあ。もうすぐ夏かあ」
+「希海さんは夏、嫌いですか？」
+「嫌い。暑いし汗かくし<ruby>目眩<rp>(</rp><rt>めまい</rt><rp>)</rp></ruby>はするし頭は痛くなるし、もう最悪。私は冬の方が好きかな」
+「うーん……私はあまり冬は好きじゃないですね。夏の方がいいです」
+　真っ白な床面が太陽光をギラギラと反射する。容赦のない照り返しに目を細めながらも希海は内心意外に思っていた。見た目だけで判断するなら、清楚で大人しそうなリコはいかにも冬が好きそうなイメージだ。それにこの子のプロセッサは熱に弱いのではなかったか。　
+「夏ねえ。冬派の端くれとして聞きたいんだけどさ、どこがいいわけ？」
+「だって、夏って何だかざわざわしてるじゃないですか」
+「ざわざわって……。もうちょっと明確に言語化してほしいんだけど」
+「あれ、わかりません？　こう、もわもわしてるというか……」
+「…………まあいいや。暑いからさっさと中入ろ？」
+　広場の反対側にある階段を登れば、本屋の入り口はすぐそこだった。扉をくぐると本棚いっぱいの背表紙が視界に広がり、ひんやりとした空気と、かすかなインクの香りがふたりを包み込む。
+「やっぱ本屋はいいわねえ。さあて、レシピ本はどこかなっと」
+　比較的大型の書店だ。目的の本を探すだけでも一手間かかるだろう。
+「あ、そういやあんた欲しい本とかある？」
+「私ですか？」
+「うん。部屋の本なんて読んでも面白くないでしょ？　私は自分の目当てのもの探してるからさ。その間に色々見てきなよ」
+　希海がゲームやネットをしている最中にちらりと横を窺ってみると、そこにはいつでも本を開いて眉間に皺を寄せているリコの姿があった。無理もない。希海が所有している本はそのほとんどが新書か青年向けのコミックである。想定年齢15歳の女の子が読むにはいささか酷だろう。それに希海は普段からリコそっちのけでゲームをしているのだ。本くらい彼女が読みたい物を読ませてやらないと後ろめたさでプレイに集中できない。
+「いいんですか？」
+「いいっていいって。あんたはそんなこと気にしないの」
+「ありがとうございます！　一生大切にしますね！」
+（…………何買うつもりよ）
+　高価な図鑑とかねだられたらどうしようかと、不安になる。
+「じゃ、私の探してるのはたぶんこっちだから。気に入った本があれば、適当に私のところまで持って来て。あ、それと私と落ち合うまでは勝手に本屋の外へ出ないこと。迷子になったら困るからね」
+　フロアを適当にうろついていると、探し物はすぐに見つかった。希海はさっさと会計を済ませると、リコを探してフロアをうろつき回る。
+　整然と立ち並ぶ壁のような本棚とそこに鎮座する多種多様な本たち。ある者は人目を引くタイトルと装丁で自らの存在を声高に主張し、またある者は同じ姿形をした仲間と共に群れの力を誇示している。まるで熱帯雨林のような本の樹海。そのさなかにぽつんと、一人の女の子が立っていた。
+　A5サイズの本を開けたリコは、その中に広がる世界を必死に目で追っている。
+　何を読んでいるのだろう、と希海は思った。活字にしてはページをめくるのが速すぎるし、漫画にしては遅すぎる。足音を殺して忍び寄ってみると、自分でも驚くほど簡単に背後まで歩を進めることができた。希海の存在に気づいていないリコは、無防備な背中を晒して手元の本に食い入ったままだ。しばし呼吸をやめ、背伸びをして本の内容を覗いてみる。
+　微動だにしない細い肩とその向こう側の紙面。光沢紙が天井の蛍光灯を映し込むその先には、一面の青い世界が広がっている。いや、正確に言うと一面ではない。ページの上部にはちぎれた<ruby>綿毛<rp>(</rp><rt>わたげ</rt><rp>)</rp></ruby>のような白い雲がいくつも見えるし、下部には真っ白な砂浜も描かれている。これは……。
+「写真集？」
+　突然の呼びかけにリコがわっ、と驚きの声を上げて振り返る。
+「もうっ、びっくりさせないでくださいよ」
+「あ、ごめん。あんまり夢中になってたみたいだからつい。何読んでたの？」
+　希海は返答を待たずしてリコの持った本へ手をかけた。そのまま表紙を自分の方へと向ける。
+「『夏の写真集』？　へえ。結構いい趣味してんじゃない」
+「あれ？　希海さんって夏は好きじゃないんですよね」
+「実際に過ごすとなると嫌になるけどね。こうやって写真で眺めるだけならわりと好きよ」
+「あ、わかります？　そうですよね。きれいですもんね」
+　リコは視線を紙面に戻してぱらぱらと本をめくっていく。太陽に照らされてきらきらと輝く小川。深緑の山々に悠然と立つ巨大な鉄塔。下町の石垣とそこから顔を出した小さなハイビスカス。水平線で交わる海と空。夏の写真集というタイトルに偽りはなく、その本にはありとあらゆる夏の情景が刻まれていた。
+「……希海さんは海って行ったことありますか？」
+「何度かね。ここ数年は全然行ってないけど」
+　紙面をめくるリコの手は、最初に開けていた海辺の写真で止まっていた。これがお気に入りの一枚なのだろうか。
+「私は行ったことありません、でも」
+　リコはぽつりとつぶやくと、再びぱらぱらとページを進めた。
+「不思議ですよね。何だかすごく懐かしい感じがするんです」
+　その一言に希海の心臓がどきりと一度、大きく音を立てる。確かにリコは海に行ったことがない。それは希海もよく知っている。だがリコではなくハルカなら――。
+「海だけじゃありません。このページとか、それにこのページとか。夏の光景って何だかすべてが懐かしく思えてきませんか？　私、夏のこういうところが好きなんですよ……って聞いてます？」
+「あ……ご、ごめん。ちょっと写真に見入っちゃって」
+　リコに悟られないように、希海は小さく安堵の溜息を付いた。どうやら昔の記憶などではなく、単に『夏はノスタルジックな季節だ』というよくある話がしたかったらしい。あまりに唐突すぎて分からなかった。
+「もうっ、ひどいですよ。希海さんがちゃんとした言葉で話せっていうからそうしたのに」
+　リコはそう言ってぷい、と拗ねたような表情を見せた。出会ってから早1ヶ月以上。希海との生活にも段々と慣れてきたのか、最近はリコのこういう表情を見かけることも多くなった。
+「何ならもう一回最初から話してくれてもいいわよ。テンポとかページめくる動作とかちゃんと再現してよね」
+「嫌ですよーだ。もう頼まれたってやりません」
+「まあまあそう言わずに。はい巻戻し」
+「そんな機能ありませんからっ！」
+　慣れてきたのはリコの方だけでない。最初の1週間は気まずさを覚えることもあったが、今やこうして冗談を言い合えるくらい、希海の中でリコの存在が自然なものになっている。
+　本の樹海にふたり分の笑い声が小さく響いた。
+　一人ぼっちの六畳一間で1年を過ごしてきた希海にとって、リコは数年ぶりにできた友達だ。沈黙を気にしなくてもいい相手。考えながら会話をする必要もない相手。希海には、それがたまらなく嬉しかった。
+「そうだ、じゃあお詫びにさ……行ってみない？」
+「へっ？　どこへですか」
+「海」
+　リコの目にまばゆい輝きが灯った。前のめりになりながら希海の方へぐいと顔を寄せる。
+「ほっ、ホントですか！？」
+「うん！」
+「ホントにホントにいいんですか！？」
+「もちろん！」
+「おっ……泳いでもいいんですか！？」
+「イエス、ユーキャン！」
+「やったぁ！　希海さんっ、ありがとうございます！」
+　思いつきで言ってみただけだが、リコを見ていると希海まで何だか楽しみになってきた。海で泳いだり砂で城を作ったり……。リコは見るからに運動が苦手そうなので遠泳はやめておくにしても、ビーチバレーくらいはふたりで楽しくできそうだ。何なら持参したスイカでスイカ割りなんかやってもいいかもしれない。きっと喜ぶだろう。
+「泳ぐにはまだちょっと寒いし、行くならもうちょっと後かな。それまでに予定決めたり水着買ったりしなきゃね」
+「はいっ！」
+「じゃあそういうことだから、ちゃっちゃとその本買っちゃお？」
+「はいっ！　……あっ、でもこれはいいです」
+　リコはいそいそと写真集を本棚に戻した。
+「あれ？　あんたその本が欲しいんじゃなかったの？」
+「これはちょっと見てただけですよ。買ってもらう本はもう決まってます」
+　本屋を出た後もふたりは地区センターを歩き回って買い物を続けた。もともと予定はしていなかったものの、リコの夏服を買ったり、電器屋で扇風機を品定めしたり、喫茶店でのんびり過ごしたりしていると、あっという間に数時間が経ってしまう。
+　帰りのバスを降りると、辺りはすっかり夕暮れの喧騒に包まれていた。遠くに聞こえる車の音や風呂場の水音。戸建住宅の軒先には夕飯の匂いが漂っており、時折テレビの音が通りに漏れ出ている。東の空からはインディゴの夜が時々刻々と染み出してきており、アパートの階段からは小さく光る一番星が見えた。
+「ああ、<ruby>疲<rp>(</rp><rt>つっか</rt><rp>)</rp></ruby>れたぁ」
+　扉を開けるやいなや、希海は靴を脱ぎっぱなしにして部屋に飛び込む。慣れた場所に帰ってくると、体中の緊張が一気にほどけてゆく気がした。
+「今日は色んなところ行きましたからね」
+　散らばった靴を丁寧に揃えてから、リコが部屋に入ってきた。
+「まあでも、これくらいでへこたれてちゃダメよ。何せ来月には海に行くんだからね。う、み」
+「ふふっ、楽しみですね」
+「そうねえ。でも海に行くとなると今日よりもっと歩くしだろうし、向こうでも遊びまわるからもっと疲れるわよ。大丈夫？」
+「希海さんこそ大丈夫ですか。長い間大学行ってないんですよね。体、けっこう<ruby>鈍<rp>(</rp><rt>なま</rt><rp>)</rp></ruby>ってません？」
+「あ……うん。そうね……」
+　嫌なことを思い出させやがって。
+　不登校と留年。リコには知られたくない事実だったが、一つ屋根の下で暮らしている以上、隠し通そうと思えばそれなりに労力が必要になる。共同生活の開始からほどなくして、希海は二択を迫られることになった。すなわち不登校の事実を正直に告白するか、失職したサラリーマンのように公園で時間をつぶしてでも隠し通すかである。
+　そして希海が選んだのはそのどちらでもなかった。
+『単位はほとんど揃っているから今期の授業は出なくていい』
+『秋からまた大学へ行くつもりだ』
+　リコにはこんな風に説明している。嘘ではなかった。実際に単位はほとんど揃っているし、秋からは大学へ行こうと思っている。はたして本当に行けるかは定かではないけれど。
+「今から鍛えとかないと大学始まったら息切れしちゃいますよ」
+「うん……まあ……」
+　屈託のない笑顔が痛い。希海はリコから目を逸らすと書店で買ったレシピ本を袋から取り出し、ろくに目を通さずぱらぱらとページをめくった。
+「いいじゃない先の話は」
+　そう先の話だ。どれほど優秀なコンピュータであっても不確定性やカオスの壁を越えられないというのに、人間の曇った目と小さな脳でどんな将来が予測できるというのか。未来は誰にもわからないのだ。わからない以上、何を言っても嘘にはならないはずである。その時が来るまでは。
+「あっ！　そうだ私も」
+　希海の様子をじっと見ていたリコが不意に声を上げた。机の上に置いた本屋のビニール袋を手に取り、がさごそと中身を取り出す。
+「えへへー。さっそく書きますよっ」
+　リコの両手には小さな日記帳があった。可愛らしいキャラクターのあしらわれたそれは、どう見ても小学生向けのものである。15歳にしてはいささか幼い代物だが、無邪気な笑顔を浮かべる今のリコにはとてもよく似合っていた。
+「あっ、何か書くものあります？」
+「シャーペンでいい？」
+　希海からシャープペンシルを受け取ると、リコは机の前に座って日記帳を広げた。かつてはラップトップ1台がぎりぎり置けるくらいの散らかりようだったこの机も、リコが片付けてくれたお陰で随分とスペースにゆとりができた。床に散らばっていた本の<ruby>類<rp>(</rp><rt>たぐい</rt><rp>)</rp></ruby>だって今は綺麗に本棚に収められている。
+（何だかんだ言ってちゃんと仕事やってるなあ）
+　希海は、以前よりもずっときれいになった自室と手元のレシピ本を交互に眺めた。料理のレパートリーがちょっと少ないとは言え、掃除も洗濯もこの子は立派にこなしている。
+（私もちゃんとしないと……）
+　秋。やがて訪れるその季節のことを考えると、不安で思わず叫びだしそうになる。あと3ヶ月。いや、まだ3ヶ月もあるのだ。そんな遠い未来のことを考えてどうなるというのか。そんなものに思いを馳せてみたところで精神の平穏を崩すだけで得るものなど一つもない。
+（……楽しみだな、海）
+　希海は無理矢理に考えを停止させた。典型的な先送りである。明日やるとか、来週やるとか、そんなことを言っているうちは、いつまでたっても出来っこないのに。そもそも、そんな『明日やる』を積み重ねた結果がこの1年ではなかったのか。未来のことを考えるのが無意味だと言うのなら、今すぐにでも大学へ行けばいい。
+　だがそんなことは希海にも分かっている。分かっているからこそ見ないふりをするのだ。駄目な自分と変われない自分。その二つと真正面から対峙する強さなど、希海は持ち合わせていなかった。
+　かりかり、かりかり…………かりかりかり。
+　少し前から途切れがちに響いている小さな音。机に向かったリコが必死にペンを動かす音だ。
+（何書いてんのかな……）
+　物言わぬリコの背中を見つめていると、不意に、その姿が本屋での光景に重なった。希海は『よし』と決意し、ゆっくりと音を立てないように腰を上げると、そのまま一歩だけ前に出る。
+　ちょうどいい。リコが何を書いているか、せっかくだから覗き見てやろうではないか。あのときはスニーカー、今は靴下。単純に履物だけを比較するなら今回の方が簡単なミッションだと言える。だが、今度の場合はなにぶん場所が悪い。他に音源の無い閉めきった部屋では、靴下が床を擦る音ですら容易にリコの耳に届いてしまう可能性があった。
+　希海は息を止めて一歩だけ足を動かし、ゆっくりと息を吐き出す。数秒をかけて肺の中の空気を出し終えると、また数秒をかけて同じように息を吸い込んだ。その場に留まって呼吸を整える。吸って吐いてを二、三回も繰り返しながら、希海は次なる一歩を頭の中でシミュレートする。六畳一間の狭い部屋だ。あと数歩も進めば、すぐにでも日記帳を覗き込める位置にたどり着くことができるだろう。そう思いながらさらなる一歩を踏み出したそのとき。
+「……？」
+　突然、日記帳と向き合っていたリコが振り返った。しまった、と後悔するも時すでに遅し。自身の影がリコの手元に差し込んでしまっていた。
+「わっ！　見ちゃだめですよ！」
+　日記帳はリコの両手によって覆い隠されてしまった。
+「何書いてんの？」
+「…………秘密です」
+「いいじゃない、ちょっとくらい見せてくれたって。減るもんじゃなしに」
+「だーめーです」
+　誰だって自分の日記なんて見られたくはないのだろう。だがここまで<ruby>頑<rp>(</rp><rt>かたくな</rt><rp>)</rp></ruby>に隠されるとどうしても見てやりたくなる。
+「わーったわよ。じゃあ目閉じとくから、その間に好きなだけ書いてちょうだい。はいどうぞ！」
+「……薄目あけてますよね」
+　希海は小さく舌打ちをした。
+「もーうっ！　だからだめですって。あっち行っといてください！」
+　強引に部屋の隅まで押し返された。よほど信用されていないのか、机に向かったリコはペンを走らせながらもチラチラと希海の方を<ruby>窺<rp>(</rp><rt>うかが</rt><rp>)</rp></ruby>ってくる。この調子では<ruby>三度<rp>(</rp><rt>みたび</rt><rp>)</rp></ruby>忍び寄るのは無理そうだ。不信をあらわにした視線が少し痛い。
+　やがて納得のいくものが書き上がったのが、リコは『できたっ』と小さくつぶやき、日記帳を持ってすくりとその場で立ち上がる。
+「じゃあ希海さん。少しの間だけ外に出ておいてもらえますか」
+「何で」
+「隠します。希海さん、勝手に読みそうだから」
+「…………」
+　絶対に見つけ出してやるから覚えていろ。タバコとライターを手に取ると、希海はしぶしぶ部屋を後にした。
+</div>
+
+    <div id="footer" v-component="hpot-page-footer"></div>
+  </div>
+</body>
+</html>
+
+<script src="config.js"></script>
+<script src="../vendor/vue.min.js"></script>
+<script src="components.js"></script>
+<script src="page.js"></script>
