--- a/hardproblem/2-05.html
+++ b/hardproblem/2-05.html
@@ -1,1 +1,78 @@
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" type="text/css" media="screen and (min-width: 24em)" href="desktop.css" />
+  <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="mobile.css" />
+  <title>真摇中心</title>
+</head>
+<body id="page">
+  <div v-component="hpot-page-header"></div>
 
+  <div class="contents">
+<div class="text">
+　電車がトンネルを抜ける。車窓には、大きく広がる真っ青な海。来たときよりも太陽が傾いているせいか、水面が反射する光にはわずかな赤みが混ざっていた。
+「…………」
+　ふたりの間に言葉はなかった。希海は微動だにせずに足元をじっと見つめており、リコもそんな希海に気を使ってか、ボックス席の反対側に座ったまま窓の外を見つめて何も話そうとしない。車内に響くのは、モーターの低い唸り声とレールの音だけ。
+　何も考えたくなかった。
+　だが考えまいとするほどに、色々な考えが希海の頭を駆け巡ってしまう。人目を避けるように着替えを済ませ、逃げるように駅へと戻ってきたこと。ビーチに置いてきた荷物はリコに取ってきてもらった。ホテルの影になった岩場と口に広がる酸の味。自分を呼び止める竹見さんの声。駅に降り立ったときのまとわり付くような熱気。海が見えるたびに喜んでみせたリコ。
+「……何も言わないの？」
+　リコは答えない。
+　まるで希海の声が聞こえないかのように、窓の外をじっと見つめたままだ。
+「あんた、ずっと前から楽しみにしてたんじゃないの。聞きたいこととか、文句の一つとか……あるでしょ」
+　電車が再びトンネルに差し掛かると、それまで静かだった車内が急に騒音で満たされる。フランジとレールが擦れる耳障りな音が車体を震わせ、トンネルの壁に反響されたモーターの轟音が会話もままならないほどの音量であたりを包み込む。
+　列車がトンネルを抜けてからも、リコはしばらく何も言わなかった。騒音の後の静けさが、ふたりの間の沈黙をよりいっそう重いものにしていく。
+「……聞いてほしいですか？」
+　希海の肩が小さく震えた。問いかけるリコの声はあまりにも静かで、そこに感情の色は見えない。
+「希海さんに何があったのか……私にはわかりません。でも、希海さんがつらい思いをしていることだけは私にだって分かります」
+　窓の外を眺めたまま、リコはゆっくりと言葉を続けた。視線の先には陽光に照らされ金色に輝く夏の海。
+「だから私からは何も言えません。海は……また行けばいいんです」
+　リコはそう言って希海を振り返り、そっと笑った。それはリコの持ちうる最大限の優しさと、気遣いだったのだろう。
+　だが今の希海には、その笑顔がとてつもなく重かった。
+　自分が、その微笑みを向けられるだけの人間だとはとても思えない。この心優しい子にこれ以上期待されたくなかった。この笑顔をこれ以上裏切りたくなかった。
+「私さ…………。長い間……大学に行ってないの」
+　だから希海は、自分の醜悪さをさらけ出すことにした。膝の上で指を強く組みしめ、リコから視線を外すように窓の外を眺めて言葉をひねり出す。
+「最初は単に夜ふかしして朝起きれなかっただけ。でもそれが何日も続くとだんだんと行きづらくなって……。明日行こうとか、来週行こうとか思い続けてる間に、気づけば1年以上が過ぎてた」
+　リコは何も言わず、希海のことをただじっと見つめて吐き出される言葉に耳を傾けている。瞳の中の虹がすこし悲しそうに揺らめいていた。
+「単位が揃ってるとか、秋から行くだなんてみんな嘘っぱち。自分勝手に学校サボって遊びに行って、遊びに行った先で知り合いに出会って、自分勝手に落ち込んでるの」
+　秘めていた思いは、さながら毒のようなものだったのだろう。さらけ出してしまえば何てことはない。言葉を吐き捨てるほどに、体の中が軽くなっていくのを感じた。これでもう格好を付けなくて済む。よく見られたいとか、期待を裏切りたくないとか、そういう<ruby>諸々<rp>(</rp><rt>もろもろ</rt><rp>)</rp></ruby>の重荷を投げ捨ててしまえば、少し楽になれる気がした。
+「ね、馬鹿みたいでしょ？　自分の都合に、周りの人やあんたを巻き込んで1人でこうして泣き言こぼしてるの。ほんと最低よ……」
+　玉突きのように次々と言葉が溢れてくる。それは、自分を責める言葉であると同時に、救いを求める声だったのかもしれない。
+「分かったでしょ。今日のことは全部私が悪いの。だから、私のことなんて気遣う必要はない。リコに気遣ってもらう資格なんて私には、これっぽちもないのよ……」
+　最後まで言い切ると、また涙が浮かんできた。何かあるたびに、こうして泣いてしまう自分が希海は嫌いだった。悪いのは自分なのに、涙を流して被害者を気取るずる賢さが、うずくまって自己憐憫に<ruby>浸<rp>(</rp><rt>ひた</rt><rp>)</rp></ruby>ろうとする身勝手さが、どうしようもなく嫌だった。
+「……でも」
+　列車がカーブを曲がり、太陽の光が差し込んでくる。
+「でも、希海さんは泣いています」
+　希海は答えない。
+　うつむきがちに手を握りしめながら、ただじっと、涙をこらえながら続くリコの言葉を待っていた。
+「誰が良くて誰が悪いのかなんて私には分かりません。でも……。でもそんな私にだって、分かることがいくつかあります。それは……」
+　本当は希海も期待していたのかもしれない。リコの優しさを知っていながら、あえて弱音を漏らしたのかもしれない。もう自分勝手でも構わない。今はただ、この子に救って欲しかった。
+「それは、希海さんがつらい思いをしているということです。希海さんが苦しんでいるということです。希海さんが……、こうして涙を流しているということです。誰かを気遣う理由なんて、それで十分じゃないですか」
+　もう枯れたと思っていた涙が、再び頬をつたった。希海の顔がくしゃくしゃと歪んでいく。だがさっきまでとは違い、瞳からこぼれるその涙はどこか透き通っている。
+　今までずっと抱え込んできた苦しみ。自分のせいだって頭で理解していても消えない痛み。心という名のどうしようもない呪い。ロボットであるこの子には理解できないのかもしれないけれど、そんなことはどうだって良かった。ただ、嘘じゃないよ、と言ってくれる誰かがいる。希海にはそれで十分だった。
+「えっとつまりですねっ！　“涙を流すものに、救いの手を差し伸べてみよ”。それが……じゃなくて、“それこそが”……えっと、“正義の基本原理である”。そういうことです！」
+　人差し指をぴんと立て、覚束ない口調で宣言するリコ。どこかで聞いたことのあるセリフである。
+（あ……）
+　希海の脳裏に一冊の本が浮かんだ。そうだ。これは自室に置いてある漫画に登場するセリフではないか。
+　身の丈に合わない文言をぎこちなく唱えるロボットの女の子。青年向けコミックスのフレーズは彼女にとって少し難しかったのだろう。その姿が妙におかしくて、希海は頬をつたう涙も忘れて笑い出してしまう。
+「あっ……あはははっ。そうね。そうかもね」
+「ふふっ、良かった。希海さん、やっと笑ってくれました」
+　特急列車の車内にふたりの笑い声が小さく響いた。窓の外には結局辿りつけなかった海が青く輝いて見える。
+　いつかまた、リコと一緒にここへ来よう。
+　そう思った。馬鹿な自分のことだ。やるやる、と言っときながら、どうせ出来ないかもしれない。出来ないかもしれないけれど、絶対にまたこの場所へリコを連れてこよう。
+「ありがと……リコ」
+　希海の涙が、太陽を反射してきらりと輝いた。
+　まぶたが驚くほどに重い。無理もない。あれだけ泣いたのだ。この目の充血はちょっとやそっとじゃ治らないだろう。こんな顔で街を歩けば、さぞかし変な目で見られるに違いない。
+――でも、そんなことはどうだっていいじゃないか。
+　そんな考えが浮かんでくるほどに、希海の気持ちは晴れ渡っていた。
+</div>
+
+    <div id="footer" v-component="hpot-page-footer"></div>
+  </div>
+</body>
+</html>
+
+<script src="config.js"></script>
+<script src="../vendor/vue.min.js"></script>
+<script src="components.js"></script>
+<script src="page.js"></script>
