--- a/hardproblem/3-07.html
+++ b/hardproblem/3-07.html
@@ -1,1 +1,104 @@
 
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" type="text/css" media="screen and (min-width: 24em)" href="desktop.css" />
+  <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="mobile.css" />
+  <title>真摇中心</title>
+</head>
+<body id="page">
+  <div v-component="hpot-page-header"></div>
+
+  <div class="contents">
+<div class="text">
+　秋の夜は驚くほどに寒い。
+　それまでが暖かい季節だったせいで、体の感覚が追いついていないからだ。つい数週間前まで半袖で寝ていたのがまるで嘘のように思える。
+　一筋の風が駆け抜け、袖口を通り抜ける空気の冷たさに希海は身震いした。着の身着のままに部屋を飛び出してきたために、上半身を覆うものは下着を除いてTシャツ1枚という有様だ。長袖であるのがせめてもの救いだが、それでもこの気温の中を徘徊するには心もとない。
+「へっくし！」
+　希海は大きなくしゃみをして鼻をすすった。
+　あれからどれくらい歩いただろうか。感覚としてはかれこれ2時間以上歩いたつもりなのだが、おそらく実際には1時間も経っていないのだろう。夜のニュータウンには本当に何もないからだ。建築制限のために商業施設はほとんど存在せず、唯一の例外である近隣センターは20時に早々とシャッターを降ろしてしまう。ときおり車のエンジン音が響くだけの、静まり返った住宅街。希海はそんな夜の街をあてもなく歩き回り、気づけば“あの場所”に辿り着いていた。
+　希海は半ば自嘲気味に、おどり場へと腰を降ろす。段差が高く、間隔は歩幅と合わず、段のひとつひとつが微妙に傾斜している階段の、そのおどり場。あのときリコが立っていた場所だ。考えもせず適当に歩いていたというのに、この階段へ戻ってきてしまったのは何の因果だろう。ここから希海のアパートへはほど近い。秋の夜風に参ってさっさと帰りたいという気持ちの現れか、それとも自分のしてしまったことに対する無意識的な何かか。
+「…………」
+　自分のしてしまったこと。
+　不意に、戸惑うリコの顔が頭に浮かんで希海の胸が締め付けられた。
+　自分は一体、どうしてあんなことをしてしまったのだろうか。希海は街の明かりにをぼんやりと眺める。おどり場から望む街の景色。夜のニュータウンは静まり返っているとはいえ、目に見える範囲の住宅にはいくつもの明かりが灯っていた。
+　なぜあんなことをしたか。
+　いくら考えても、その答えは出てこない。だが、何かに突き動かされた希海のあの行いが、リコとの関係をご破算にしてしまったということだけは確かだ。
+（なんだ。結局……）
+　結局、いつもと同じである。希海は、感情を上手くコントロールできなかったのだ。いつものように心に振り回されてしまったのだ。大学へ行けていないのと同じ構図である。
+　希海は大きくため息を付いて、ポケットを探りだす。
+　タバコでも吸おうと思った。こんなときはタバコでも吸うものだ。一本吸って気合を入れたら、戻ってリコに謝ろう。そう思った。
+　だがいくらポケットを探っても目的の物は一向に見つからない。
+「あ……」
+　そして希海は思い当たる。そういえば、タバコを部屋に忘れてきてしまった。考えてみれば当然である。あの後、上着も着ずに部屋を飛び出してしまったのだ。上着すら着る余裕がなかったというのに、タバコを持ってくる余裕などあろうはずがなかった。
+　仕方がない。
+　希海が探すのを諦めようとしたそのとき
+「どうぞ」
+　背後からタバコが差し出された。
+　希海は目を丸くしてその場に固まってしまうが、しばらくして恐る恐るタバコとライターを手に取ると、赤一色のソフトパックから一本を取り出し火をつけた。
+　ライターの炎が一瞬大きくなる。
+　希海は深呼吸をするように肺に煙を入れ、大きく吐き出した。まるで自身の中に渦巻く感情を吐き捨てるように。
+「……めずらしいじゃない。いつもは体に悪いからやめろってうるさいのに」
+「こんなときはタバコでも吸うものです」
+　リコは穏やかな口調でそう答えると、希海の横に腰を降ろした。
+　隣に座った少女は何も言わない。希海も何も言わない。
+　突然のリコの訪問に、頭の中で考えていたセリフがすべて吹き飛んでしまったのだ。何から言おう。どうやって喋ろう。頭の中で必死に言葉を探している内に、タバコの火は早々とフィルターにまで到達してしまう。
+　希海は足元のコンクリートでタバコをもみ消すと、吸殻をポケットに入れる。もはや手慰みの小道具も失ってしまった。これから先は思い沈黙がふたりの間にのしかかるだけだ。リコは相変わらず、穏やかな表情で階段から見える街の景色に目をやっていた。おそらく希海が言葉を紡ぐのを待ってくれているのだろう。優しい子だと希海は思う。だからこそ何かを言わなければ。この子の優しさに報いなければ。
+　心臓の鼓動が早くなる。
+　格好なんてつけている場合か。とにかく謝れ。今はそれがすべてだ。それすらできないのなら、お前にリコを預かる資格なんてない。何度も何度も、自分に強く言い聞かせる。そして希海は大きく息を吸い、手のひらをいっそう強く握り締めると、
+「……ごめん」
+　そう、小さくつぶやいた。今にも消えてしまいそうな声だったが、その一言が呼び水となり、続く言葉が喉を突いて飛び出してくる。
+「ほんとごめん。私、どうかしちゃってて……。何であんなことしちゃったんだろう。怖かったよね」
+　ようやく言えた謝罪。一方のリコは一瞬きょとんとした表情を浮かべると、やがていつもの無邪気な笑顔を浮かべた。
+「大丈夫です。ちょっとびっくりしましたけど、気にしてませんから」
+　あまりにも穏やかなリコの様子に罪悪感がかえって大きくなる。希海は自らの胸に手をあて拳を握りしめた。
+「あのさ……」
+　夜風がふたりの間を駆け抜け、希海の体温を緩やかに奪っていく。寒さは感じるものの不思議と嫌な気はしなかった。尻に敷いたコンクリートの冷たさも今ではどこか心地良い。
+「昨日一緒にお風呂入ったときさ。リコの……、その……、あそこ見て……、私すっごい驚いちゃったの。どうしてロボットにこんなものが付いてるんだろうって。すぐに忘れようとしたんだけど、ネットで嫌なもの見ちゃってから、もうそれが頭から離れなくて」
+　ネットで見たセクサロイドの写真。背丈も顔つきも、性別すらも様々なロボット。中にはリコと年齢設定を同じくするものもあった。
+「セクサロイドって知ってる？　人間に体を提供するためのロボット。リコにあれが付いていた理由もひょっとしたら、そういう目的のためなんじゃないかって。もちろん、東さんは違うって言ってたけど――」
+「東さんがですか？」
+　希海は慌てて我に返る。危なかった。この話題は、リコの過去に関する話だ。このまま何も考えずに喋っていては、言ってはいけない話をリコに漏らしてしまう可能性がある。
+「う、うん。SDRではセクサロイドの生産はしてないからって。だからリコの過去のデータがもう残っていなくても、リコがそういう目的のために生産されたわけじゃないことは確かだって」
+　リコは目線を手元に落とす。その様子は、自らの失われた過去に思いを馳せているようにも見えた。
+「頭では分かってる。リコがそういう目的で作られたわけじゃないっていうことは。でも……。でも、どうしても結びつけて考えちゃうの。リコにあれが付いていた理由は男の人を、オーナーを喜ばせるためなんじゃないかって。そういうことが、リコの過去にはあったんじゃないかって」
+　リコが過去に何をしていたなんて、その詳しいところを希海は知りもしない。希海だってリコに話していない過去の一つや二つを抱えている。相手の過去を知らないのはお互い様だというのに、希海はリコの過去に想像という脚色を加え、暴力的な形でその真偽を確かめようとしたのだ。
+　街の灯がまた一つ消えた。
+　どこかで誰かが眠りについたのだろう。その灯のひとつひとつに人生や家庭があるのだ。使い古された言葉だが、今の希海にはその途方も無さがよく分かる。この世界には星の数ほどの人間がいて、数えきれないほどの出会いと別れを繰り返し、語り尽くせぬほどの過去を抱いて生きているのだ。
+　リコはそんな街の灯から少し目を逸らすと、何かを考えるように瞼を閉じた。街灯の明かりが、長いまつ毛を照らしだす。
+「ずっとずっと、疑問に思っていたことがあります」
+　しんと静まりかえった夜の空気に、少女の声が響いた。
+「私は昔のことを覚えていませんけど、多分この疑問は生まれたときから持ち続けていたんだと思います」
+　そう言って目を見開き、憂いとも諦めともつかぬ顔で遠くを見つめるリコ。あの顔だ、と希海は思った。
+「ねえ希海さん。どうして人間は私達を作ったんでしょう」
+　自分たちが作られた理由、自らの存在理由を問いかけるヒューマノイド。その姿は、人間が神に問いを投げかけるのに似ていた。
+「それは……」
+　リコたちヒューマノイドが作られた理由。東は、人間を作ることが目的だと言っていたけど、おそらくそれはリコの求めている答えではないのだろう。リコが投げかけているのは、なぜ人間の模造品を作ろうと思ったかという、もっと根源的な問いだ。もしも神が、全能の神とやらがこの宇宙の外にいるならば、彼は人を作った理由も上手く説明できるのだろう。だが――
+「……それは、分からない」
+　だが希海は神ならぬ人間だ。ましてや技術者でもなければSDRの社員でもない。そんな希海が、リコの求めている答えなど持ちあわせていようはずもなかった。
+「ふふっ。そうですよね」
+　端から答えなど期待していなかったのだろう。重々しく答える希海を鼓舞するかのように、リコは優しく微笑みかける。
+「どうして人間が私達を作ったのか……その答えは私にも分かりません。でもね、私はこう思うんです。それを知るためにはまず人間を理解しないといけないって。希海さんたち人間のことを理解すれば、いつかきっとその答えが分かるんじゃないかって」
+　リコはそう言って自らの腹部に手をかけると、柔らかな手付きで体を撫ではじめる。
+「だから“これ”もきっと、そのためにあるんです。私達が人間を理解するために。人間の心を理解するために……。誰が授けてくれたものなんです」
+　さながら乳飲み子を慈しむ母親のようだった。
+　そんな少女の姿が言いようのないほどに美しく見えて、冷たい夜風がふたりの間を駆け抜けるまでの間、希海はしばらく何も言えずにリコの横顔をただひたすらに眺めていた。
+
+　その後のことについて少しだけ記しておこう。
+　小春のその後についてだ。
+　ずっと後にSDRを訪れた際、東から聞いたところによると、小春は宣言通り自らの悩みを打ち明けてみたのだとか。もともと店の手伝いとして購入された小春がそんな風に思い詰めていたとはオーナーにとっても予想外だったようで、話をしてみると案外すんなりと受け入れられらしい。そして、それまで店の経営一筋だったオーナーも以降はちょくちょくと小春と共に旅行へいくようになったそうである。
+　そして東は懐から一枚の写真を取り出して希海に渡してみせた。そこ写っていたのはヨーロッパらしき見知らぬ町並みと、笑顔を浮かべてカメラに視線をやる小春。隣には見知らぬ少女の姿もあった。
+『ぜひ青山さんに見せてください』
+　旅先からのメールには、そんなリクエストが付いていたのだとか。
+</div>
+
+    <div id="footer" v-component="hpot-page-footer"></div>
+  </div>
+</body>
+</html>
+
+<script src="config.js"></script>
+<script src="../vendor/vue.min.js"></script>
+<script src="components.js"></script>
+<script src="page.js"></script>
