--- a/hardproblem/4-01.html
+++ b/hardproblem/4-01.html
@@ -10,6 +10,10 @@
   <div v-component="hpot-page-header"></div>
 
   <div class="contents">
+<div class="logo hpot-sect4-logo">
+  <img src="../img/section4title.png" />
+</div>
+
 <div class="text">
 　冬。吐いた息が白く立ち上がる朝とおごそかに静まり返った夜の空気が印象的な季節。冷たくなった手先をこすり合わせながらストーブを焚き、木枯らしが吹き始める頃にはお気に入りのコートを衣装ケースからひっぱり出す季節。大晦日が近づけば道端を足早に通り過ぎる人の家庭へ思いを馳せ、年が明けると羽子板を突く子供の姿を微笑ましく眺める季節。希海は、そんな冬が一年のうちでもっとも好きだった。
 　ただし、この日を除いて。
