真摇中心 -> ふたりのハードプロブレム

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" media="screen and (min-width: 24em)" href="desktop.css" />
   <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="mobile.css" />
-  <title>真摇中心</title>
+  <title>ふたりのハードプロブレム</title>
 </head>
 <body id="page">
   <div v-component="hpot-main-header"></div>
