--- a/hardproblem/3-02.html
+++ b/hardproblem/3-02.html
@@ -67,8 +67,8 @@
 　希海は夏以来、リコに勉強を教えてやっている。当初はいつまで続くかわからないと思っていたが、今のところは特にフェードアウトの気配もなく順調に進んできている。継続が苦手な希海がここまで続けてこられたのも、ひとえに毎日欠かさずに教科書を開くリコのおかげだった。
 　リコはしどろもどろになりながら、つい数週間前に勉強した生物物理学の内容を説明する。口調こそたどたどしかったものの、その中身は概ね的を射たものであった。
 「はい。その通り。リコも言った通り、オルゴンってのは電磁気力や重力なんかと同じで、この宇宙を形作る基本的な相互作用のひとつなわけね。んで、人に限らず多くの生物の脳はオルゴンで満たされている。ニューロワームっていうのは、このオルゴンを……正確に言うとオルゴンの<ruby>場<rp>(</rp><rt>フィールド</rt><rp>)</rp></ruby>を媒介して、人の脳に寄生する病原体みたいなものなの」
-「病原体……菌とかウィルスとかですか？」
-「そう。ただ細菌やウィルスとの違いは、実体が無いっていこと。細菌もウィルスは元をたどれば原子や分子、素粒子の集まりだけど、ニューロワームはそうじゃない。ニューロワームの本体はオルゴン場に刻まれた情報なの。でもそれ以外は細菌やウィルスと同じ。代謝・自己複製・境界という生物の3要件もしっかりと満たしてるわ」
+「病原体……細菌とかですか？」
+「そう。ただ細菌との違いは、実体が無いっていこと。細菌は元をたどれば原子や分子、素粒子の集まりだけど、ニューロワームはそうじゃない。ニューロワームの本体はオルゴン場に刻まれた情報なの。でもそれ以外は細菌をはじめとする微生物と同じ。代謝・自己複製・境界という生物の3要件もしっかりと満たしてるわ」
 「なんだかコンピュータウィルスみたいですね」
 「ご名答。実際にニューロワームっていう名前は、コンピュータウィルスのワームから採られてるのよ。<ruby>神経細胞<rp>(</rp><rt>ニューロン</rt><rp>)</rp></ruby>に寄生するワームってとこね」　
 「ふふっ。さすが希海さん、色んなこと知ってますね」
