--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -98,7 +98,7 @@
 　いや、大した夜景でないことははじめから分かっていたし、期待もしていない。なぜならば、ここへ来たそもそもの訳が「それらしい理由を付けて人目のない場所へ行きたかった」というものである。夜景は方便だ。そして方便である以上、その夜景が多少しょっぱいものであったとしても何ら問題はない。それにリコのことだからある程度以上のものであればなんでも喜んでくれる……、そんな下心もあった。
 　だが眼前に広がる夜景は、それ以下の有り様である。いや、これを夜景と呼ぶことからして既に烏滸がましく、「駅前の繁華街が遠目に見えている」と形容した方がずっと忠実な表現だ。ひと気の少なさに相応しい貧素な眺望を前にして、希海は頭を抱えた。
 　これから一体どうしよう。
-　『仕方がないね』と言って帰るか、『戻ろうか』と言って地区センターへときびすを返すか。あるいは『見て！　綺麗な夜景ね！』と強引に自分を騙し続けるという方法もある。
+　『仕方がないね』と言って帰宅するか、『戻ろうか』と言って地区センターへときびすを返すか。あるいは『見て！　綺麗な夜景ね！』と強引に自分を騙し続けるという方法もある。
 「……まあ、」
 　だがリコはそんな内心を見透かすようにクスっと苦笑いを浮かべると
 「まあ、今日はこれで満足してあげます。ほら、もっと近くで見ましょうよ」
