--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -127,7 +127,7 @@
 　いままで漠然と感じていた不安に言葉が輪郭を提供し、希海の胸が一層強く締め付けられた。そうだ。この関係は、いつまで続くか分からない。結局、自分が一番恐れているのはそのことなのだ。あるときリコが自らの過去を思い出して、今の生活よりも大切な思い出や、希海よりもずっと大切だった人のことを思い出してしまったら。そのとき自分は、リコは一体どうするのだろう。
 「希海さん」
 　知らずと握りしめていた拳。そんな希海の手に、そっとあたたかいものがかぶさった。
-「私は、今とっても幸せです。希海さんと一緒にご飯が食べたり、希海さんと一緒に勉強をしたり、そんな風に誰かと一緒に色んなことをできるのが、とっても幸せなんです。だから私は希海さんのことを放って、どこかへ行ったりなんてしませんよ」
+「私は、今とっても幸せです。希海さんと一緒にどこかへ出かけたり、希海さんと一緒に勉強をしたり、そんな風に誰かと一緒に色んなことをできるのが、とっても幸せなんです。だから私は希海さんのことを放って、どこかへ行ったりなんてしませんよ」
 　リコはそう言って目を細めた。幸せを噛みしめるような柔らかくて優しい微笑み。手のひらに伝わる温かい感触。瞳の奥にきらめく一輪の虹。その虹を見ていると、希海の中にある一つの衝動が湧き上がった。
 「…………あ、あのさ」
 ――言ってしまいたい。
@@ -154,7 +154,7 @@
 「真浜大学の高塚です」
 ――！！
 　その名を聞いた瞬間、心臓が冷たくなるのを希海はしっかりと感じた。
-　<ruby>高 塚 靖 友<rp>(</rp><rt>たかつかやすとも</rt><rp>)</rp></ruby>。真浜大学自然科学部の教授であり、希海の指導教官である。フルネームが頭をよぎると同時に、記憶の片隅に眠っていた顔が脳裏をよぎった。
+　<ruby>高 塚 靖 友<rp>(</rp><rt>たかつかやすとも</rt><rp>)</rp></ruby>。真浜大学自然科学部の教授であり、希海の指導教官である。フルネームが頭をよぎると同時に、記憶の片隅に眠っていた顔が脳裏に蘇った。
 「あ、ああ、あの……、え、えっと……」
 　あまりに突然すぎて何を言えば良いかが分からなかった。頭の中が真っ白になる、とは正にこのような状況のためにある言葉なのだろう。言い訳は愚か、電源を切ってそのまま逃げてしまいたいという願望すら浮かんでこない。
 「少し話があります。要件は……分かってますね」
