--- a/hardproblem/3-06.html
+++ b/hardproblem/3-06.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <link rel="stylesheet" type="text/css" media="screen and (min-width: 24em)" href="desktop.css" />
   <link rel="stylesheet" type="text/css" media="not screen and (min-width: 24em)" href="mobile.css" />
   <title>ふたりのハードプロブレム</title>
