--- a/hardproblem/3-07.html
+++ b/hardproblem/3-07.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<link rel="stylesheet" type="text/css" media="not screen and (max-device-width: 480px)" href="desktop.css" />
-<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 480px)" href="mobile.css" />
+  <link rel="stylesheet" type="text/css" href="desktop.css" />
+  <link rel="stylesheet" type="text/css" href="portrait.css" />
+  <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
 </head>
 <body id="page">
