ルビ振られていなかったのを修正。

--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -71,9 +71,7 @@
 　そう言って東は人差し指をぴんと立てる。
 「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>(</rp><rt>　　S　　　　D　　　　R　　</rt><rp>)</rp></ruby>サマリー17シリーズ第4世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのヒューマノイドは盗難対策の一環として<ruby>全球定位系統<rp>(</rp><rt>GPS</rt><rp>)</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
 　やはりGPSか。希海の想像していた通りである。女の子と会ってから、ものの1時間程度で自宅の場所まで押さえられるなんておかしいと思っていた。
-「次に二つ目。記憶の欠損と意識障害について。一般的なヒューマノイドの頭脳には<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>(</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>)</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して神経ネット内で大規模な<ruby>量子もつれ<rp>(</rp><rt>エンタングルメント</rt><rp>)</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の干渉性
-コヒーレンス
-が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>(</rp><rt>デコヒーレンス</rt><rp>)</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
+「次に二つ目。記憶の欠損と意識障害について。一般的なヒューマノイドの頭脳には<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>(</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>)</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して神経ネット内で大規模な<ruby>量子もつれ<rp>(</rp><rt>エンタングルメント</rt><rp>)</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>(</rp><rt>コヒーレンス</rt><rp>)</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>(</rp><rt>デコヒーレンス</rt><rp>)</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
 　急に難しい話になってしまった。希海は慌てて頭の中を整理する。つまり、あの少女のコンピュータは演算に巨視的な量子効果を利用しているのだけれど、そのせいで熱に弱くて、長時間放置していると意識が途切れたり、記憶が欠落したりするということなのだろう。本当はもっとややこしい機構や物理過程が関わってくるのだろうが、今の希海にはその程度の理解で十分だと思えた。
 「少し専門的になってしまったが、大丈夫かな？」
 　必死に頭を動かしている様が伝わったのか、東は会話を中断して希海の思考が追いつくのを待ってくれていた。
